--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,38 @@
 *{
     box-sizing: content-box;
 }
+
+.bordo-container{
+    border: 1px solid black;
+    min-height: 100px;
+    
+}
+
+.bordo-col{
+    border: 3px dashed red;
+}
+
+.bordo-card{
+    border: 5px solid yellow;
+}
+
+
+
+
+
+
+
+
+
+
+
+/*--MEDI--QUERY--
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) { ... }
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) { ... }
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) { ... }
+*/
