--- a/css/style.css
+++ b/css/style.css
@@ -5,22 +5,21 @@
     --bg-location: #3A546D;
     --txt: #2C3E50;
     --txt-white: white;
-    --bg-trasparent:#000000;
+    --bg-trasparent: #000000;
 }
 
-.star{
+.star {
     width: 100%;
-    height: 100%;
 }
 
-.line{
-    width: 8%;
+.line {
+    width: 15%;
     height: 4px;
     border-radius: 2px;
     background-color: var(--txt-white);
 }
 
-.fa-star{
+.fa-star {
     font-size: 2rem;
 }
 
@@ -46,54 +45,77 @@
     line-height: 100px;
 }
 
-#header .fa-bars{
+#header .fa-bars {
     padding: 0.25rem 0.5rem;
     border: 1px solid var(--txt-white);
     border-radius: 5px;
 }
 
-#header h3{
+#header h3 {
     color: var(--txt-white);
     font-weight: bold;
-    
+
 }
 
-#header .nav{
-    --bs-nav-link-color:var(--txt-white);
-    font-weight:600;
+#header .nav {
+    --bs-nav-link-color: var(--txt-white);
+    font-weight: 600;
 }
 
-        /*--JUMBOTRON*/
+/*--JUMBOTRON*/
 
-#jumbotron{
+#jumbotron {
     background-color: var(--bg-start-about);
     color: var(--txt-white);
     width: 100%;
     height: 100%;
 }
 
-#jumbotron h1{
+#jumbotron h1 {
     font-weight: bold;
-}
-#jumbotron svg{
-    max-width: 60%;
+    font-size: 2rem;
 }
 
-#jumbotron .info{
+#jumbotron svg {
+    max-width: 40%;
+}
+
+#jumbotron .info {
     width: 100%;
 }
 
 
+/*--PORTFOLIO*/
 
+#portfolio h2, #portfolio .star{
+    color: var(--bg-header-foot);
+}
+#portfolio .line{
+    background-color: var(--bg-header-foot);
+}
 
+#portfolio .card-img{
+    border-radius: 20px;
+}
 
+/*--ABOUT--*/
+
+#about{
+    background-color: var(--bg-start-about);
+    color: var(--txt-white);
+}
 /*--CONTACT*/
 
 #contact textarea.form-control {
     min-height: calc(10.5em + 0.75rem + 2px)
 }
 
-/*--LOCATION--*/
+/*--ABOUT--*/
+
+#about .btn-success{
+    background-color: var(--bg-start-about);
+    border-color: var(--txt-white);
+}
 
 
 
@@ -136,24 +158,38 @@
 /*--MEDI--QUERY--*/
 
 /* Small devices (landscape phones, 576px and up)*/
-@media (min-width: 576px) { 
-
- }
+@media (min-width: 576px) {}
 
 /* Medium devices (tablets, 768px and up)*/
 @media (min-width: 768px) {
-    #jumbotron svg{
-        max-width:40%;
+    #jumbotron svg {
+        max-width: 30%;
     }
- }
 
-/* Large devices (desktops, 992px and up)*/
-@media (min-width: 992px) { 
-#header .container{
-    max-width: 992px;
+    .fa-star{
+        font-size: 1rem;
+    }
+    i.px-1 {
+        padding-right: 1rem!important;
+        padding-left: 1rem!important;
+    }
+   
+    .line {
+        width: 10%;
+        height: 3px;
+    }
+
+
 }
 
-    #jumbotron svg{
-        max-width:20%;
+/* Large devices (desktops, 992px and up)*/
+@media (min-width: 992px) {
+    #header .container {
+        max-width: 992px;
     }
- }
+
+    #jumbotron svg {
+        max-width: 20%;
+    }
+
+}
