--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@
     font-size: 2rem;
 }
 
+
 /*FONT--AWESOME*/
 
 /* 
@@ -37,12 +38,13 @@
     */
 
 /*--HEADER--*/
-
-#header {
+nav{
     min-height: 100px;
+}
+#header {
+    height: 100px;
     background-color: var(--bg-header-foot);
     color: var(--txt-white);
-    line-height: 100px;
 }
 
 #header .fa-bars {
@@ -51,6 +53,9 @@
     border-radius: 5px;
 }
 
+#header button, #header{
+    border-color: var(--txt-white);
+}
 #header h3 {
     color: var(--txt-white);
     font-weight: bold;
@@ -138,7 +143,7 @@
 #contact button {
     background-color: var(--bg-start-about);
     border: 0;
-    font-size: 1.25rem;
+    font-size: 1rem;
 }
 
 /*--LOCATION--*/
@@ -191,6 +196,9 @@
     #jumbotron svg {
         max-width: 30%;
     }
+    #header .container{
+        max-width: 820px;
+    }
 
     .fa-star {
         font-size: 1rem;
@@ -217,5 +225,9 @@
     #jumbotron svg {
         max-width: 20%;
     }
+
+    #header .navbar-expand-lg .navbar-collapse {
+        
+        justify-content: flex-end;
 
 }
